<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_launcher_name" translatable="false">SycoTax</string>
    <string name="app_name" translatable="false">SycoTax</string>
    <string name="pref_payment_cash" translatable="false">payment_cash</string>
    <string name="pref_language" translatable="false">language</string>
    <string name="pref_currency" translatable="false">currency</string>
    <string name="pref_search_mode" translatable="false">search_mode</string>
    <string name="pref_scan_mode" translatable="false">scan_mode</string>
    <string name="pref_payment_orange_wallet" translatable="false">payment_orange_wallet</string>
    <string name="pref_allow_print" translatable="false">allow_print</string>
    <string name="pref_allow_qr_code" translatable="false">allow_qr_code</string>
    <string name="pref_show_tax_notice" translatable="false">show_tax_notice</string>
    <string name="pref_version_name" translatable="false">version_name</string>
    <string name="pref_version_code" translatable="false">version_code</string>
    <string name="pref_model" translatable="false">model</string>
    <string name="pref_os_Version" translatable="false">os_version</string>
    <string name="pref_payment" translatable="false">payment</string>
    <string name="pref_general" translatable="false">general</string>
    <string name="pref_application" translatable="false">application</string>
    <string name="pref_system" translatable="false">system</string>
    <string name="pref_tax_notice" translatable="false">tax_notice</string>
    <string name="pref_history" translatable="false">from_history</string>
    <string name="txt_0" translatable="false">0</string>
    <string name="txt_1" translatable="false">1</string>
    <string name="txt_2" translatable="false">2</string>
    <string name="txt_3" translatable="false">3</string>
    <string name="txt_4" translatable="false">4</string>
    <string name="txt_5" translatable="false">5</string>
    <string name="txt_6" translatable="false">6</string>
    <string name="txt_7" translatable="false">7</string>
    <string name="txt_8" translatable="false">8</string>
    <string name="txt_9" translatable="false">9</string>
    <string name="CLR" translatable="false">CLR</string>
    <string name="title_tax_details">Tax Details</string>
    <string name="title_taxes">Taxes</string>
    <string name="title_credit_balance_statement">Agent Credit Balance Statement</string>
    <string name="title_payment">Payment</string>
    <string name="title_tax_receipt">Tax Receipt</string>
    <string name="title_my_profile">My Profile</string>
    <string name="title_agent">Agent</string>
    <string name="title_invoice_no">Invoice No</string>
    <string name="title_tax_notice_no">Tax Notice No</string>
    <string name="title_rop">Right of places in Market</string>
    <string name="title_collection_history">Collection History</string>
    <string name="title_businesses">Businesses</string>
    <string name="title_tax_payers_verification">Verify Tax Payers</string>
    <string name="title_products">Municipal Taxes</string>
    <string name="title_select_date">Select Date</string>
    <string name="title_master">MASTER</string>
    <string name="title_settings">Settings</string>
    <string name="title_reports">REPORTS</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_agent_collection_summary">Agent Cash collection Summary</string>
    <string name="title_rental_details">Rental tax details</string>
    <string name="title_phones">Phones</string>
    <string name="title_emails">Emails</string>
    <string name="title_address">Address</string>
    <string name="title_business_owner">Business Owner</string>
    <string name="title_business_owner_id">Business Owner ID</string>
    <string name="title_register_business">Register Business</string>
    <string name="title_business_owner_search">Business owner search</string>
    <string name="title_update_business">Update Business</string>
    <string name="title_register_owner">Register Owner</string>
    <string name="title_tax_notice">Tax Notice</string>
    <string name="title_my_agents">My Agents</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_cart_tax">Cart Tax</string>
    <string name="title_other_taxes">Other Taxes</string>
    <string name="title_select_business">Select Business</string>
    <string name="title_business_summary">Business Summary</string>
    <string name="title_documents_preview">Documents Preview</string>
    <string name="title_tasks_location">Tasks Locations</string>
    <string name="title_incident_location">Incident Locations</string>
    <string name="title_business_documents">Business Documents</string>
    <string name="title_location_tracker">Agent Live Tracking</string>
    <string name="title_business_location">Business</string>
    <string name="title_complaints_location">Complaint Locations</string>
    <string name="title_geo_spatial_data">GEO SPATIAL DATA</string>
    <string name="title_licence_renewal">Licence Renewal</string>
    <string name="general_header">General</string>
    <string name="payment_header">Payment</string>
    <string name="tax_notice_header">Tax notice</string>
    <string name="language_title">Language</string>
    <string name="msg_authenticating">Authenticating…</string>
    <string name="msg_enter_amount">Please enter amount</string>
    <string name="msg_enter_otp">Please enter OTP</string>
    <string name="msg_enter_valid_otp">Please enter 6 digit OTP</string>
    <string name="msg_invalid_password">Invalid current password</string>
    <string name="msg_logout">Do you want to logout?</string>
    <string name="msg_multiple_payment_not_allowed">Multiple payments not allowed</string>
    <string name="msg_no_data">No data available</string>
    <string name="msg_no_internet">Please check internet connection.</string>
    <string name="msg_password_empty">Please provide password</string>
    <string name="msg_password_same">Current password and new password cannot be the same</string>
    <string name="msg_payment_cannot_be_more">Payment cannot be allowed, you have entered more than due amount.</string>
    <string name="msg_payment_failed">Payment failed</string>
    <string name="msg_permission_qr_scanner">Give permission to access QR scanner</string>
    <string name="msg_please_wait">Please wait…</string>
    <string name="msg_processing_payment">Processing payment…</string>
    <string name="msg_provide">Please provide</string>
    <string name="msg_provide_valid">Please provide valid</string>
    <string name="menu_business">Business</string>
    <string name="account_name">Account Name</string>
    <string name="agent_commission_report">Agent Commission Report</string>
    <string name="business_transaction_history">Transaction History</string>
    <string name="cancel">Cancel</string>
    <string name="cash">Cash</string>
    <string name="label_summary_details"><![CDATA[Summary Details]]></string>
    <string name="logout">Logout</string>
    <string name="menu_incident_management">Incidents</string>
    <string name="status">Status</string>
    <string name="tax_notice_history">Tax Notice History</string>
    <string name="cash_deposit_request">Cash Deposit Request</string>
    <string name="currency">Currency</string>
    <string name="application">Application</string>
    <string name="system">System</string>
    <string name="scan">Scan</string>
    <string name="orange_wallet">Orange Wallet</string>
    <string name="print_qr_code">Print QR Code</string>
    <string name="show_tax_notice_on_screen">Show tax notice on screen</string>
    <string name="preferences">Preferences</string>
    <string name="device_info">Device Info</string>
    <string name="after_payment_tax_notice_will_be_shown_on_screen">After payment tax notice will be shown on screen</string>
    <string name="tax_notice_will_not_be_shown">Tax notice will not be shown</string>
    <string name="qr_code_will_be_printed_in_tax_notice">QR code will be printed in tax notice</string>
    <string name="qr_code_will_not_be_printed_in_tax_notice">QR code will not be printed in tax notice</string>
    <string name="print_after_every_successful_payment">Prints after every successful payment</string>
    <string name="print_will_not_come_after_payment">Print will not come after payment</string>
    <string name="barcode_qr_code_scan_allowed">Barcode or QR code scan allowed</string>
    <string name="barcode_or_qr_code_scan_not_allowed">Barcode or QR code scan not allowed</string>
    <string name="search_allowed">Search allowed</string>
    <string name="search_not_allowed">Search not allowed</string>
    <string name="model_os_ram_version">Model, OS version, RAM, Version name, Version code</string>
    <string name="header_allow_print">Allow Print</string>
    <string name="header_version_name">Version Name</string>
    <string name="header_version_code">Version Code</string>
    <string name="header_model">Model</string>
    <string name="header_os_Version">OS Version</string>
    <string name="header_search">Search</string>
    <string name="customer">Customer</string>
    <string name="title_license_details">License Details</string>
    <string name="title_verification">VERIFICATION</string>
    <string name="penalty_waive_off">Penalty Waive Off</string>
    <string name="title_stock_in_report">Stock In Report</string>
    <string name="outstanding_waive_off">Outstanding Waive Off</string>
    <string name="net_receivable">Net Receivable</string>
    <string name="current_due">Current Due</string>
    <string name="title_asset_onboarding">Asset OnBoarding</string>
    <string name="update_asset_booking">Update Asset Booking</string>
    <string name="booking_request_id">Booking Request ID</string>
    <string name="booking_request_date">Request Date</string>
    <string name="asset_assignment">Asset Assignment</string>
    <string name="title_update_asset">Update Asset</string>
    <string name="return_asset">Return Asset</string>
    <string name="title_individual_tax_summary">Individual Tax Summary</string>
    <string name="notice_reference_no">Notice Reference No</string>
    <string name="parking_place">Parking Place</string>
    <string name="parking_start_date">Parking Start Date</string>
    <string name="parking_end_date">Parking End Date</string>
    <string name="parking_ticket_id">Parking Ticket ID</string>
    <string name="parking_ticket_history">Parking Ticket History</string>
    <string name="impoundment_list">Pending Impoundments</string>
    <string name="title_pending_violations">Pending Contraventions</string>
    <string name="title_property_txt">Property</string>
    <string name="title_property_location">Property Locations</string>
    <string name="title_property_tax_summary">Property Tax Summary</string>
    <string name="title_land_tax_summary">Land Tax Summary</string>
    <string name="license_renewal">License Renewal</string>
    <string name="title_pending_services">Pending Services Invoice</string>
    <string name="service_request_master">Service Request Master</string>
    <string name="new_asset_booking">New Rental</string>
    <string name="vehicle_no">Vehicle Registration No.</string>
    <string name="title_sales_history">Sales History</string>
    <string name="adjustments">Stock Management</string>
    <string name="title_stock_status">Stock Status</string>
    <string name="share_logs">Share Logs</string>
    <string name="stock_transfer">Stock Transfer</string>
    <string name="security_history">Security History</string>
    <string name="title_businesses_activation">Businesses Activation</string>
    <string name="title_cheque_repayments">Bounced Cheque Payments</string>
    <string name="title_sales_report">Category Wise Sales Report</string>
</resources>