<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextHeader"
                android:text="@string/parking_place" />

            <TextView
                android:id="@+id/tvParkingPlace"
                style="@style/TextBody" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextHeader"
                android:text="@string/parking_start_date" />

            <TextView
                android:id="@+id/tvParkingStartDate"
                style="@style/TextBody" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextHeader"
                android:text="@string/parking_end_date" />

            <TextView
                android:id="@+id/tvParkingEndDate"
                style="@style/TextBody" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextHeader"
                android:text="@string/notice_reference_no" />

            <TextView
                android:id="@+id/tvNoticeReferenceNo"
                style="@style/TextBody" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextHeader"
                android:text="@string/parking_ticket_id" />

            <TextView
                android:id="@+id/tvParkingTicketID"
                style="@style/TextBody" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextHeader"
                android:text="@string/status" />

            <TextView
                android:id="@+id/tvStatus"
                style="@style/TextBody" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextHeader"
                android:text="@string/current_due" />

            <TextView
                android:id="@+id/tvCurrentDue"
                style="@style/TextBody" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextHeader"
                android:text="@string/net_receivable" />

            <TextView
                android:id="@+id/tvNetReceivable"
                style="@style/TextBody" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextHeader"
                android:text="@string/vehicle_no" />

            <TextView
                android:id="@+id/tvVehicleNumber"
                style="@style/TextBody" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextHeader"
                android:text="@string/account_name" />

            <TextView
                android:id="@+id/tvAccountName"
                style="@style/TextBody" />

        </LinearLayout>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/cancel"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</layout>