<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_root_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="8dp"
    android:paddingEnd="16dp"
    android:paddingBottom="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextHeader"
            android:text="@string/booking_request_id" />

        <TextView
            android:id="@+id/txtBookingNumber"
            style="@style/TextBody"
            android:layout_marginStart="@dimen/five_dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextHeader"
            android:text="@string/booking_request_date" />

        <TextView
            android:id="@+id/txtBookingRequestDate"
            style="@style/TextBody"
            android:layout_marginStart="@dimen/five_dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextHeader"
            android:text="@string/customer" />

        <TextView
            android:id="@+id/txtCustomerName"
            style="@style/TextBody"
            android:layout_marginStart="@dimen/five_dp"/>

    </LinearLayout>

</LinearLayout>

</layout>